@@ -163,7 +163,6 @@ not specified, the data is read from stdin so you can do things like:
 .B $ gpg \-\-export\-secret\-key my\-key | paperkey | lpr
 .SH SEE ALSO
 .BR gpg (1),
-.BR /usr/share/doc/paperkey/README.gz,
 .BR http://www.jabberwocky.com/software/paperkey/
 .SH AUTHORS
 \fBpaperkey\fR is written by David Shaw <dshaw@jabberwocky.com>.
